--- a/vog-2.ini
+++ b/vog-2.ini
@@ -11,7 +11,7 @@
 
 ;设置规则标志位
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/vogana/nvvn/refs/heads/main/Direct.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/vogana/nvvn/refs/heads/main/ProxyLite.list
+ruleset=🚀 手动切换,https://raw.githubusercontent.com/vogana/nvvn/refs/heads/main/ProxyLite.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
