--- a/vog-2.ini
+++ b/vog-2.ini
@@ -83,3 +83,32 @@ overwrite_original_rules=true
 ;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
 
 ;luck
+proxy-groups:
+- name: 长风
+  type: load-balance
+  strategy: round-robin
+  url: http://www.gstatic.com/generate_204
+  interval: 300
+  use:
+  - fo
+  - ba
+
+proxy-providers:
+  fo:
+    type: http
+    path: "./proxy_provider/bl.yaml"
+    url: https://oss.v2rayse.com/proxies/data/2023-12-30/YVKtWd1.yaml
+    interval: 3600
+    health-check:
+      enable: true
+      url: http://www.gstatic.com/generate_204
+      interval: 300
+  ba:
+    type: http
+    path: "./proxy_provider/ky.yaml"
+    url: https://oss.v2rayse.com/proxies/data/2023-12-30/FYpMGkd.yaml
+    interval: 3600
+    health-check:
+      enable: true
+      url: http://www.gstatic.com/generate_204
+      interval: 300
