--- a/vog2.ini
+++ b/vog2.ini
@@ -71,7 +71,7 @@ custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]TH 越南节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]TH 越南节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换
 
 custom_proxy_group=🐸 手动切换`select`.*
 custom_proxy_group=🇯🇵 日本节点`select`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
