--- a/vog-2.ini
+++ b/vog-2.ini
@@ -2,7 +2,7 @@
 
 ;设置规则标志位
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/vogana/nvvn/refs/heads/main/Direct.list
-ruleset=🚀 手动切换,https://raw.githubusercontent.com/vogana/nvvn/refs/heads/main/ProxyLite.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/vogana/nvvn/refs/heads/main/ProxyLite.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛡️ 隐私防护,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
