--- a/vog2.ini
+++ b/vog2.ini
@@ -73,7 +73,7 @@ custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]TH 越南节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换
 
 custom_proxy_group=🐸 手动切换`select`.*
-custom_proxy_group=🇯🇵 日本节点`select`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(vip1|游戏)).)*$
+custom_proxy_group=🇯🇵 日本节点`select`(?=.*(日本|JP))^((?!(vip1|游戏)).)*$
 custom_proxy_group=🇸🇬 加坡节点`select`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(vip1|游戏)).)*$
 custom_proxy_group=🇺🇲 美国节点`select`(?=.*(美国|🇺🇲))^((?!(vip1|游戏)).)*$
 custom_proxy_group=TH 越南节点`select`(?=.*(越南|TH))^((?!(vip1|游戏)).)*$
