--- a/rusi.ini
+++ b/rusi.ini
@@ -1,6 +1,5 @@
 [custom]
 
-
 ;规则集定义
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/vogana/nvvn/refs/heads/main/Direct.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/vogana/nvvn/refs/heads/main/AI.list
@@ -46,7 +45,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 ;策略组定义
-custom_proxy_group=🚀 节点选择`select`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]TH 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 
 
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
@@ -85,11 +84,9 @@ custom_proxy_group=🍃 日本均衡`load-balance`(?=.*(日本|JP))^((?!(vip1)).
 custom_proxy_group=🍃 加坡均衡`load-balance`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🍃 美国均衡`load-balance`(?=.*(美国|🇺🇲))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 自动选择`url-test`(?=.*(vip2))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
-
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media|vip2)
 
 ;启用自定义规则集
 
 enable_rule_generator=true
 overwrite_original_rules=true
-
