--- a/rusi.ini
+++ b/rusi.ini
@@ -39,7 +39,7 @@ ruleset=🎯 全球直连,[]GEOSITE,CN
 ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
-;策略组定义
+;策略组定义01
 custom_proxy_group=🚀 节点选择`select`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
@@ -62,19 +62,19 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换
-
+;策略组定义02
 custom_proxy_group=🐸 手动切换`select`(vip1|vip2)
-custom_proxy_group=🇯🇵 日本节点`select`(?=.*(日本|JP))^((?!(vip1|游戏)).)*$
-custom_proxy_group=🇸🇬 加坡节点`select`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(vip1|游戏)).)*$
-custom_proxy_group=🇺🇲 美国节点`select`(?=.*(美国|🇺🇲))^((?!(vip1|游戏)).)*$
-custom_proxy_group=🇻🇳 越南节点`select`(?=.*(越南|🇻🇳))^((?!(vip1|游戏)).)*$
-custom_proxy_group=🇭🇰 香港节点`select`(?=.*(香港|🇭🇰))^((?!(vip1|游戏)).)*$
+custom_proxy_group=🇯🇵 日本节点`url-test`(?=.*(日本|JP))^((?!(vip1|游戏)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 加坡节点`url-test`(?=.*(新加坡|坡|狮城|SG))^((?!(vip1|游戏)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国节点`url-test`(?=.*(美国|UM))^((?!(vip1|游戏)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇻🇳 越南节点`select`(?=.*(越南|VN))^((?!(vip1|游戏)).)*$
+custom_proxy_group=🇭🇰 香港节点`select`(?=.*(香港|HK))^((?!(vip1|游戏)).)*$
 custom_proxy_group=🔯 日本故转`fallback`(?=.*(日本|JP))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 加坡故转`fallback`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 美国故转`fallback`(?=.*(美国|🇺🇲))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 加坡故转`fallback`(?=.*(新加坡|坡|狮城|SG))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 美国故转`fallback`(?=.*(美国|UM))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🍃 日本均衡`load-balance`(?=.*(日本|JP))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🍃 加坡均衡`load-balance`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🍃 美国均衡`load-balance`(?=.*(美国|🇺🇲))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🍃 加坡均衡`load-balance`(?=.*(新加坡|坡|狮城|SG))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🍃 美国均衡`load-balance`(?=.*(美国|UM))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 自动选择`url-test`(?=.*(vip2))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media|vip2)
 ;启用自定义规则集
