--- a/rusi.ini
+++ b/rusi.ini
@@ -1,6 +1,7 @@
 [custom]
 ;规则集定义
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/vogana/nvvn/refs/heads/main/Direct.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/vogana/nvvn/refs/heads/main/ProxyLite.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/vogana/nvvn/refs/heads/main/AI.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
