--- a/anna-3.ini
+++ b/anna-3.ini
@@ -78,7 +78,7 @@ custom_proxy_group=🔯 美国故转`fallback`(?=.*(美国|UM))^((?!(vip1)).)*$`
 custom_proxy_group=🍃 日本均衡`load-balance`(?=.*(日本|JP))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🍃 加坡均衡`load-balance`(?=.*(新加坡|坡|狮城|SG))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🍃 美国均衡`load-balance`(?=.*(美国|UM))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🍃 轮询均衡`load-balance`round-robin`(vip1|vip2)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🍃 轮询均衡`load-balance`strategy: round-robin`(vip1|vip2)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 自动选择`url-test`(?=.*(vip2))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media|vip2)
 ;启用自定义规则集
