--- a/anna-2.ini
+++ b/anna-2.ini
@@ -40,7 +40,7 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 ;策略组定义01
 custom_proxy_group=🚀 节点选择`select`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]🍃 轮询负载`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
@@ -51,15 +51,15 @@ custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇯🇵 日本节点`[]🇸🇬
 custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换
 custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🎥 奈飞节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换
-custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]🍃 负载散列`[]♻️ 自动选择`[]🐸 手动切换
+custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]🍃 轮询负载`[]♻️ 自动选择`[]🐸 手动切换
 custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]🍃 轮询负载`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]🍃 轮询负载`[]♻️ 自动选择`[]🐸 手动切换
 ;策略组定义02
 custom_proxy_group=🐸 手动切换`select`(vip1|vip2)
 custom_proxy_group=🇯🇵 日本节点`url-test`(?=.*(日本|JP))^((?!(vip1|游戏)).)*$`http://www.gstatic.com/generate_204`300,,50
@@ -73,7 +73,7 @@ custom_proxy_group=🔯 美国故转`fallback`(?=.*(美国|UM))^((?!(vip1)).)*$`
 custom_proxy_group=🍃 日本均衡`load-balance`(?=.*(日本|JP))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🍃 加坡均衡`load-balance`(?=.*(新加坡|坡|狮城|SG))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🍃 美国均衡`load-balance`(?=.*(美国|UM))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🍃 负载散列`load-balance`(vip1|vip2)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🍃 轮询负载`load-balance`(vip2)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 自动选择`url-test`(?=.*(vip2))^((?!(vip1)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media|vip2)
 ;启用自定义规则集
