--- a/gongyong.ini
+++ b/gongyong.ini
@@ -33,25 +33,25 @@ ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 ;策略组定义01
-custom_proxy_group=🚀 节点选择`select`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英国自动`[]♻️ 法国自动`[]♻️ 德国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英国自动`[]♻️ 法国自动`[]♻️ 德国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英国自动`[]♻️ 法国自动`[]♻️ 德国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英国自动`[]♻️ 法国自动`[]♻️ 德国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🐬 OneDrive`select`[]DIRECT`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英国自动`[]♻️ 法国自动`[]♻️ 德国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英国自动`[]♻️ 法国自动`[]♻️ 德国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英国自动`[]♻️ 法国自动`[]♻️ 德国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英国自动`[]♻️ 法国自动`[]♻️ 德国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英国自动`[]♻️ 法国自动`[]♻️ 德国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英国自动`[]♻️ 法国自动`[]♻️ 德国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英国自动`[]♻️ 法国自动`[]♻️ 德国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🎥 奈飞节点`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英国自动`[]♻️ 法国自动`[]♻️ 德国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🎥 DisneyPlus`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英国自动`[]♻️ 法国自动`[]♻️ 德国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英国自动`[]♻️ 法国自动`[]♻️ 德国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英国自动`[]♻️ 法国自动`[]♻️ 德国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英国自动`[]♻️ 法国自动`[]♻️ 德国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英法德自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英法德自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英法德自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英法德自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🐬 OneDrive`select`[]DIRECT`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英法德自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英法德自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英法德自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英法德自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英法德自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英法德自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英法德自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🎥 奈飞节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🎥 DisneyPlus`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英法德自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英法德自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英法德自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英法德自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英国自动`[]♻️ 法国自动`[]♻️ 德国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英法德自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 ;策略组定义02
 custom_proxy_group=🐸 手动切换`select`.*
 custom_proxy_group=🍃 日本均衡`load-balance`(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美|cn|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
