--- a/gongyong.ini
+++ b/gongyong.ini
@@ -64,6 +64,8 @@ custom_proxy_group=♻️ 台湾自动`url-test`(?=.*(台|新北|彰化|TW|Taiwa
 custom_proxy_group=♻️ 韩国自动`url-test`(?=.*(KR|Korea|KOR|首尔|韩|韓))^((?!(港|台|日|美|CN|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 香港自动`url-test`(?=.*(港|HK|Hong Kong))^((?!(日|台|韩|新|美|CN|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 英法德自动`url-test`(?=.*(英|UK|Britain|Británico|法|FR|France|Français|德|DE|Germany|Deutsch))^((?!(CN|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 英法德乌克兰自动`url-test`(?=.*(英|UK|Britain|Británico|法|FR|France|Français|德|DE|Germany|Deutsch|乌|UA|Ukraine|Ukrainian))^((?!(CN|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
+
 custom_proxy_group=♻️ 自动选择`url-test`(?=.*)^((?!(CN|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎥 奈飞节点`select`(?=.*)^((?!(CN|中国|官方)).)*$
 ;启用自定义规则集
