--- a/gongyong.ini
+++ b/gongyong.ini
@@ -63,8 +63,7 @@ custom_proxy_group=♻️ 加坡自动`url-test`(?=.*(新|SG|(?i)Singapore))^((?
 custom_proxy_group=♻️ 台湾自动`url-test`(?=.*(台|新北|彰化|TW|Taiwan))^((?!(港|日|韩|美|CN|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 韩国自动`url-test`(?=.*(KR|Korea|KOR|首尔|韩|韓))^((?!(港|台|日|美|CN|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 香港自动`url-test`(?=.*(港|HK|Hong Kong))^((?!(日|台|韩|新|美|CN|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=♻️ 欧洲自动`url-test`(?=.*(英|UK|法|FR|德|DE|乌|UA|意|IT|西|ES|葡|PT|瑞|SE|荷|NL|芬|FI|挪|NO|丹|DK|希|GR|捷|CZ|匈|HU|波|PL|罗|RO|斯|SK|斯洛|SI|爱|IE|巴|BG|克|HR|塞|RS|拉|LV|立|LT|爱|EE))^((?!(CN|中国|官方)).)*$
-*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 欧洲自动`url-test`(?=.*(英|UK|法|FR|德|DE|乌|UA|意|IT|西|ES|葡|PT|瑞|SE|荷|NL|芬|FI|挪|NO|丹|DK|希|GR|捷|CZ|匈|HU|波|PL|罗|RO|斯|SK|斯洛|SI|爱|IE|巴|BG|克|HR|塞|RS|拉|LV|立|LT|爱|EE))^((?!(CN|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 自动选择`url-test`(?=.*)^((?!(CN|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎥 奈飞节点`select`(?=.*)^((?!(CN|中国|官方)).)*$
 ;启用自定义规则集
