--- a/gongyong.ini
+++ b/gongyong.ini
@@ -40,7 +40,7 @@ custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]♻️ 日本自动
 custom_proxy_group=🐬 OneDrive`select`[]DIRECT`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
